--- a/ProjRemo/src/pages/Comunidades/Comunidade/StyleComunidade.css
+++ b/ProjRemo/src/pages/Comunidades/Comunidade/StyleComunidade.css
@@ -1,32 +1,77 @@
 .ComunidadeContainer{
-    & h2, h3{
+    display: flex;
+    flex-direction: column;
+    background: radial-gradient(circle, #fcfcfc, #cbfccb); /* Cores de exemplo, ajuste conforme necessário */
+
+    & h2{
+        padding: 0.4rem;
         color: rgb(38, 150, 7);
+        margin-bottom: 1rem ;
+    }
+
+    & .Descricao {
+        padding: 1rem;
+        width: 20rem;
+        align-self: end;
+        background-color: #0b4800a4;
+        display: flex;
+        color: #ffffff;
+        justify-content:center;
+        margin-bottom: 0.4rem;
+
+    }
+
+    & .SpaceADDWikis{
+
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: flex-end;
+        & a{
+                padding: 0.5rem 2rem;
+                text-decoration: none;
+                color: white;
+                border-radius: 2px;
+                border: none;
+                background-color: #103c02;
+            
+        }
+        
+    
     }
 }
 
 .ComunidadeeADD{
+    background: radial-gradient(circle, #fcfcfc, #cbfccb); /* Cores de exemplo, ajuste conforme necessário */
+
+    margin: 1rem;
     display: flex;
     flex-direction: column;
+    background-color: #fbfbfb;
 
 }
 
 .WikiComunidade{
+    background: radial-gradient(circle, #fcfcfc, #cbfccb); /* Cores de exemplo, ajuste conforme necessário */
+
     
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
     & .WikiInComunidade{
+        margin-left: 2rem;
         background-color: #f3f3f3;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
-        max-width: 12rem;
+        width: 20rem;
 
 
     & h3{
         margin-top: 0;
-        color: #299907;
+        color: #1c6e03;
     }
     
     & p:last-of-type{
@@ -39,7 +84,7 @@
         align-self: self-end;
         padding: 2%;
         color: white;
-        background-color:  #00A310;
+        background-color:  #04480b;
         border-radius: 15px;
         border: none;
         margin-bottom: 0.7rem;
@@ -55,23 +100,7 @@
 
 
 }
-.SpaceADDWikis{
-    margin-top: 2rem;
-    display: flex;
-    justify-content: flex-end;
-    & a{
-       
-            padding: 0.4rem  2rem;
-            color: white;
-            border-radius: 2px;
-            border: none;
-            background-color: #299907;
-            margin-bottom: 4rem;
-        
-    }
-    
 
-}
 @media screen and (min-width:600px) {
     .SpaceADDWikis{
         margin-top: 2rem;
@@ -84,13 +113,12 @@
                 border-radius: 2px;
                 border: none;
                 background-color: #299907;
-                margin-bottom: 4rem;
-            
+
         }
     }
 
    .ComunidadeeADD{
-        justify-content: space-between;
+        justify-content: center;
         flex-direction: row;
         margin-left: 1rem;
     
@@ -101,83 +129,3 @@
         }
     }
 }
-
-/* .AddWiki{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2px;
-    color: white;
-    
-    
-    & input{
-        background-color: #00A310;
-        width: 19.8rem;
-        align-self: center;
-        color: white;
-        
-    }
-
-    & textarea{
-        background-color: rgb(198, 198, 198);
-        height: 5rem;
-        width: 50rem;
-        align-self: self-end;
-    }
-    & button{
-        background-color: #00A310;
-             align-self: self-end;
-             border: none;
-             padding: 8px;
-
-    }
-    & input::placeholder,
-    textarea::placeholder {
-  color: rgb(255, 255, 255);
-}
-
-} */
-
-
-/* .SpaceADDWikis{
-    display: flex;
-    flex-direction: column;
-    margin-top: 1rem;
-    background-color: #e0e0e0;
-    
-    & h3{
-        color: #005809;
-    }
-
-
-    & input{
-        background-color: #00A310;
-        width: 19rem;
-        align-self: center;
-        color: white;
-        padding: 0.4rem;
-        
-    }
-
-    & textarea{
-        align-self: center;
-        background-color: rgb(198, 198, 198);
-        height: 5rem;
-        width: 90%;
-        margin: 5px;
-        margin-bottom:1.4rem;
-        
-        
-    }
-    & button{
-        background-color: #00A310;
-             align-self: self-end;
-             border: none;
-             padding: 8px;
-
-    }
-    & input::placeholder,
-    textarea::placeholder {
-  color: rgb(255, 255, 255);
-} */
-
