--- a/ProjRemo/src/pages/Comunidades/styleComunidades.css
+++ b/ProjRemo/src/pages/Comunidades/styleComunidades.css
@@ -1,12 +1,22 @@
-.Comunidade{
+.ComunidadeCompleta{
+    background: radial-gradient(circle, #fcfcfc, #cbfccb); /* Cores de exemplo, ajuste conforme necessário */
+    height: 100vh;
+
+& .Comunidade{
     display: flex;
+    margin: 0;
+    padding: 0;
     flex-direction: column;
-
     & h1{
+        align-self: start;;
+        padding: 20px;
+        display: flex;
+        margin-top: 0;
         color: green;
+        
     }
-
-
+    
+    
     & .AllComunidades{
         display: flex;
         flex-direction: column;
@@ -25,7 +35,7 @@
             
             & button{
                 border-radius: 4px;
-                background-color: green;
+                background-color: rgb(2, 61, 2);
                 border: none;
                 color: white;
                 margin-bottom: 1rem;
@@ -38,7 +48,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                background-color: rgb(48, 180, 18);
+                background-color: rgb(15, 78, 1);
                 box-shadow: -1px 0.5px 0.5rem rgb(181, 181, 181);
 
                 & input{
@@ -86,6 +96,7 @@
         }
     }
     
+}
 }
 
 .SemComunidades{
