--- a/ProjRemo/src/pages/PerfilUser/Prateleira/styleprateleira.css
+++ b/ProjRemo/src/pages/PerfilUser/Prateleira/styleprateleira.css
@@ -4,43 +4,69 @@
 
   
 
-  & h2, h3, label {
-    color: #01800d;
+  & h2,h3 {
+    color: #055900db
   }
 
-  & .AddPrateleira {
-    box-shadow: -1px 0.5px 0.5rem rgb(131, 131, 131);
-    border-radius: 10px;
-    padding: 10px;
+   
+  & .Filtros{
+    padding: 0.5rem;
     display: flex;
-    flex-direction: column;
-    align-self: center;
-    gap: 1rem;
-    background-color: rgb(241, 241, 241);
-
-    & input::placeholder {
-      color: #ffffff;
-    }
-
-    & input,
-    select {
-      color: white;
-      background-color: rgb(15, 175, 52);
-      border-radius: 5px;
-      border: none;
-
-    }
+    flex-direction: row;
+    justify-content: center;
+    background-color: #ececec ;
 
     & button {
       color: white;
       display: flex;
       align-self: center;
-      border-radius: 10px;
+      border-radius: 2px;
       border: none;
-      background-color: rgb(18, 152, 18);
+      width: 8rem;
+      padding:0.5rem;
+      justify-content: center;
+      background-color: #077101db;
+      margin: 0 10px;
+    }
+    & button:focus{
+      background-color: #02700d;
     }
   }
-}
+
+  & .Listas{
+    margin-top: 1rem;
+    display: flex;
+
+    & .Filmes{
+      justify-content: center;
+
+      & ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        & li{
+          margin: 0.1rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 8rem;
+          height: 8rem;
+            & img{
+              object-fit: cover;
+              width: 100%; 
+              height: 100%;
+              
+            }
+
+        }
+      }
+    }
+        
+  }
+
+  }
+
 
 .BtCategory{
   display: flex;
